[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HandManipulator.gd" type="Script" id=1]
[ext_resource path="res://Artwork/bot01/hand.png" type="Texture" id=2]
[ext_resource path="res://IK/IK.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Looker_Atter.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="HandManipulator" type="Node2D"]
script = ExtResource( 1 )
rest_begin_angle_degrees = -180
rest_end_angle_degrees = 180

[node name="IK" parent="." instance=ExtResource( 3 )]
arms_target = NodePath("../Hand/Sprite")

[node name="Hand" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Hand"]
position = Vector2( -4.76837e-07, 4.76837e-07 )
scale = Vector2( 4, 4 )
z_index = 3
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand"]
shape = SubResource( 1 )

[node name="DebugArrow" type="Polygon2D" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
color = Color( 0.815686, 0.815686, 0.815686, 1 )
polygon = PoolVector2Array( 0, 13, 3, 13, 3, 2, 17, 2, 17, 5, 20, 3, 24, 0, 20, -3, 17, -5, 17, -2, 3, -2, 3, -4, 3, -12, 0, -12, 0, -4, 0, -2 )

[connection signal="body_entered" from="Hand" to="." method="_on_Hand_body_entered"]
[connection signal="body_exited" from="Hand" to="." method="_on_Hand_body_exited"]
[connection signal="mouse_entered" from="Hand" to="." method="_on_Hand_mouse_entered"]
[connection signal="mouse_exited" from="Hand" to="." method="_on_Hand_mouse_exited"]
